@@ -398,25 +398,13 @@ bool ZeroLeptonCRWT::processEvent(xAOD::TEvent& event)
     }
   }
   if ( !oneLepton ) return true;
+  m_counter->increment(weight,incr++,"1 Lepton",trueTopo);
 
   // Apply Lepton scale factors
-  float lepSF=1;
-  /*
-  if ( !m_IsData ) {
-    for ( size_t e0=0; e0<isolated_signal_electrons.size(); e0++)
-      {
-	const ElectronProxy& thise = isolated_signal_electrons[e0];
-	thise.getSF(lepSF);
-      }
-    for ( size_t m0=0; m0<isolated_signal_muons.size(); m0++)
-      {
-	const MuonProxy& thism = isolated_signal_muons[m0];
-	thism.getSF(lepSF);
-      }
-  }
-  weight *= lepSF ; 
-  */
-  m_counter->increment(weight,incr++,"1 Lepton",trueTopo);
+  float muSF = eventInfo->auxdecor<float>("muSF");
+  if ( muSF != 0.f ) weight *= muSF;
+  float elSF = eventInfo->auxdecor<float>("elSF");
+  if ( elSF != 0.f ) weight *= elSF;
   
   // Add lepton to jets (SR) or MET (VR)
   TVector2 missingETPrime =  *missingET;
